add Api,add unit testing
